--- a/01-sample.yaml
+++ b/01-sample.yaml
@@ -1,6 +1,6 @@
 - name: Play1
   hosts: all
   tasks:
-    - name: PrinitingHi to santhosh from play1
+    - name: Priniting Hello from play1
       ansible.builtin.debug:
-        msg: Hello from santhosh play1
+        msg: Hello from play of taks1
