--- a/01-sample.yaml
+++ b/01-sample.yaml
@@ -3,4 +3,4 @@
   tasks:
     - name: Priniting Hello from play1
       ansible.builtin.debug:
-        msg: Hello from play of taks1
+        msg: Hello from santhosh play1
