--- a/02-vars.yaml
+++ b/02-vars.yaml
@@ -5,4 +5,4 @@
   tasks:
     - name: Priniting the value of varible
       ansible.builtin.debug:
-        msg: Calue of the {{ URL }}
+        msg: Value of the {{ URL }}
