--- a/02-vars.yaml
+++ b/02-vars.yaml
@@ -1,7 +1,7 @@
 - name: Demo on vars
   hosts: all
   vars:
-    URL: play.google.loacal.com
+    URL: play.google.global.com     #in that URL is given at the play level it's called global variable its can used across the playbook
   tasks:
     - name: Priniting the value of varible
       ansible.builtin.debug:
@@ -9,4 +9,6 @@
 
     - name: Priniting the value of varible
       ansible.builtin.debug:
-        msg: Value of the {{ car }}
+        msg: Value of the {{ URL }}
+      vars:
+        URL: play.google.local.com      # this vars (URl)given at the task level so its an local varaible
