--- a/02-vars.yaml
+++ b/02-vars.yaml
@@ -7,7 +7,7 @@
       ansible.builtin.debug:
         msg: Value of the {{ URL }}
 
-    - name: Priniting the value of varible
+    - name: Demo for loacal variable
       ansible.builtin.debug:
         msg: Value of the {{ URL }}
       vars:
