--- a/02-vars.yaml
+++ b/02-vars.yaml
@@ -15,7 +15,7 @@
 
     - name: Demo for commad line variable
       ansible.builtin.debug:
-        msg: Value of the {{ CARNAME }}
+        msg: Value of the {{ URL }}
 
     - name: Demo for double from stating line line variable
       ansible.builtin.debug:
