--- a/03-facts.yaml
+++ b/03-facts.yaml
@@ -2,11 +2,12 @@
 
 - name: Demo on  facts
   hosts: all
+  gather_facts: no
   tasks:
-    - name: Printing the fact
+    - name: Printing the distribution
       ansible.builtin.debug:
-        msg: ansible_distribution is {{ ansible_distribution }}
+        msg: ansible_distribution is {{ ansible_distribution }}   # this will show the OS and flavour of the node
         
     - name: Printing the macAddress of the machine
       ansible.builtin.debug:
-        msg: macAddress is {{ ansible_default_ipv4.macaddress }}
+        msg: macAddress is {{ ansible_default_ipv4.macaddress }} this will show the mac of the nodes
