--- a/03-facts.yaml
+++ b/03-facts.yaml
@@ -2,7 +2,7 @@
 
 - name: Demo on  facts
   hosts: all
-  gather_facts: no
+  gather_facts: false
   tasks:
     - name: Printing the distribution
       ansible.builtin.debug:
