--- a/04-register.yaml
+++ b/04-register.yaml
@@ -1,10 +1,6 @@
-- name: Demo on register 
-  hosts: all
+- name: Demo on using register
+  hosts: all 
   tasks:
-    - name: Demo on shell
-      ansible.builtin.shell: uptime
+    - name: Demo on using shell module 
+      ansible.builtin.shell: uptime 
       register: OUT
-
-    - name: Printing output variable
-      ansible.builtin.debug: 
-        msg: "{{OUT}}""
