--- a/04-register.yaml
+++ b/04-register.yaml
@@ -1,10 +1,10 @@
-- name: Demo on using register 
+- name: Demo on register 
   hosts: all
   tasks:
-    - name: Demo on using shell
+    - name: Demo on shell
       ansible.builtin.shell: uptime
       register: OUT
 
     - name: Printing output variable
       ansible.builtin.debug: 
-        msg: "{{OUT}}"
+        msg: "{{OUT.stdout}}"
