--- a/06-conditions.yaml
+++ b/06-conditions.yaml
@@ -1,7 +1,8 @@
 - name: This is about demo on conditions
   hosts: all
+  vars:
+    action: true
   tasks:
-  action: true
     - name: run if is debian
       ansible.builtin.debug:
         msg: It's an CentOS
@@ -15,4 +16,4 @@
     - name: Run this action 
       ansible.builtin.debug: 
         msg: Run only if it's true
-      when: action   
+      when: action  
