--- a/06-conditions.yaml
+++ b/06-conditions.yaml
@@ -2,6 +2,7 @@
   hosts: all
   vars:
     action: true
+    bar: abc
   tasks:
     - name: run if is debian
       ansible.builtin.debug:
@@ -17,3 +18,8 @@
       ansible.builtin.debug: 
         msg: Run only if it's true
       when: action  
+
+    - name: Run this module
+      ansible.builtin.debug: 
+        msg: bar is defined
+      when: bar is defined  
