--- a/07-tags.yaml
+++ b/07-tags.yaml
@@ -31,4 +31,6 @@
         msg: Starting cart
       tags: cart
 
-      # added 
+    # ansible-playbook -i inv -e ansible_user=centos -e ansible_password=DevOps321 07-tags.yaml -t user
+
+    #above command is to run witht the help of tag Here -t represents to run the play using the tag and her user tage will run the PLAY
