--- a/10-install.yaml
+++ b/10-install.yaml
@@ -1,6 +1,7 @@
 - name: Play1
   hosts: all
-  tasks:
+  become: yes   # using this we are taking root privilages
+  tasks: 
     - name: Install ntpdate
       ansible.builtin.package:
         name: ntpdate             # it's a package name you want to install
