--- a/10-install.yaml
+++ b/10-install.yaml
@@ -2,9 +2,9 @@
   hosts: all
   become: yes   # using this we are taking root privilages
   tasks: 
-    - name: Install ntpdate
+    - name: Install nginx
       ansible.builtin.package:
-        name: ntpdate             # it's a package name you want to install
+        name: nginx             # it's a package name you want to install
         state: present        # Present means install ,Absent is uninstall,lates it to update
 
 
