--- a/10-install.yaml
+++ b/10-install.yaml
@@ -7,7 +7,7 @@
         name: nginx             # it's a package name you want to install
         state: present        # Present means install ,Absent is uninstall,lates it to update
 
-    - name: install wget
+    - name: Install wget
       ansible.builtin.debug:
         name: wget
         state: present
