--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -5,7 +5,7 @@
 
 - name: downloading and extractinf the component
   ansible.builtin.unarchive:
-    src: https://github.com/stans-robot-project/frontend/archive/main.zip
+    src: https://github.com/stans-robot-project/{{ COMPONENT }}/archive/main.zip
     dest: /tmp
     remote_src: yes
 
@@ -14,9 +14,9 @@
     path: /usr/share/nginx/html/
     state: absent  # absent means delete
 
-- name: copying the frontedn content which is downlod at remote server
+- name: copying the frontend content which is downlod at remote server
   ansible.builtin.copy:
-    src: /tmp/frontend-main/static/
+    src: /tmp/{{ COMPONENT }}-main/static/
     dest: /usr/share/nginx/html/
     remote_src: yes
 
