--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -16,7 +16,7 @@
 
 - name: Starting the MongoDb service
   ansible.builtin.systemd:
-    name: mongodb-org 
+    name: mongodb
     state: started
     enabled: true
 
