--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -20,7 +20,21 @@
     state: started
     enabled: true
 
+- name: downloading and extracting the MONGODB schema
+  ansible.builtin.unarchive:
+    src: https://github.com/stans-robot-project/{{ COMPONENT }}/archive/main.zip
+    dest: /tmp
+    remote_src: yes    
 
+- name: Injecting the mongoDB shema
+  community.mongodb.mongodb_shell:
+    file: "/tmp/{{ COMPONENT }}-main/catalogue.js"
+    idempotent: yes                       #idempotent means if you apply an idempotent operation or function once or multiple times, the outcome remains the same.
+
+- name: Injecting the mongoDB user shema
+  community.mongodb.mongodb_shell:
+    file: "/tmp/{{ COMPONENT }}-main/user.js"
+    idempotent: yes 
 
 
 
