--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -28,13 +28,16 @@
 
 - name: Injecting the mongoDB shema
   community.mongodb.mongodb_shell:
-    file: "/tmp/{{COMPONENT}}-main/catalogue.js"
-    idempotent: yes                       #idempotent means if you apply an idempotent operation or function once or multiple times, the outcome remains the same.
+    file: "/tmp/{{ COMPONENT }}-main/{{ item }}.js"
+    idempotent: yes                                     #idempotent means if you apply an idempotent operation or function once or multiple times, the outcome remains the same.
+  loop:
+    - catalogue
+    - users                        
 
-- name: Injecting the mongoDB users shema
-  community.mongodb.mongodb_shell:
-    file: "/tmp/{{COMPONENT}}-main/users.js"
-    idempotent: yes 
+# - name: Injecting the mongoDB users shema
+#   community.mongodb.mongodb_shell:
+#     file: "/tmp/{{ COMPONENT }}-main/users.js"
+#     idempotent: yes 
 
 
 
