--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -3,11 +3,10 @@
     name: nginx
     state: present 
 
-- name: downloading and extracting the component
-  ansible.builtin.unarchive:
-    src: https://github.com/stans-robot-project/{{ COMPONENT }}/archive/main.zip
-    dest: /tmp
-    remote_src: yes
+- name: Download and extract frontend
+  ansible.builtin.include_role:
+    name: common
+    tasks_from: download
 
 - name: celaning old content
   ansible.builtin.file:
