--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -20,11 +20,10 @@
     state: started
     enabled: true
 
-- name: downloading and extracting the MONGODB schema
-  ansible.builtin.unarchive:
-    src: https://github.com/stans-robot-project/{{ COMPONENT }}/archive/main.zip
-    dest: /tmp
-    remote_src: yes    
+- name: Download and extract mongodb
+  ansible.builtin.include_role:
+    name: common
+    tasks_from: download 
 
 - name: Injecting the mongoDB shema
   community.mongodb.mongodb_shell:
