--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -20,6 +20,8 @@
   ansible.builtin.copy:
     src: /tmp/{{ COMPONENT }}-main/
     dest: /home/{{APPUSER}}/{{COMPONENT}}
+    owner: "{{APPUSER}}"
+    group: "{{APPUSER}}"
     remote_src: yes
 
 # - name: Configuring MongoDB
