--- a/roles/cart/tasks/main.yml
+++ b/roles/cart/tasks/main.yml
@@ -23,7 +23,7 @@
 - name: Copying the systemd files
   ansible.builtin.template:
     src: systemd.service
-    dest: /etc/systemd/service/system/{{COMPONENT}}
+    dest: /etc/systemd/service/system/{{COMPONENT}}.service
 
 
 - name: ReStarting the {{COMPONENT}}
