--- a/roles/frontend/templates/roboshop.conf
+++ b/roles/frontend/templates/roboshop.conf
@@ -15,11 +15,11 @@
 
     location /api/user/ { proxy_pass http://user-{{ENV}}.roboshop.internal:8080/; }
 
-    location /api/cart/ { proxy_pass http://localhost:8080/; }
+    location /api/cart/ { proxy_pass http://cart-{{ENV}}.roboshop.internal:8080/; }
 
-    location /api/shipping/ { proxy_pass http://localhost:8080/; }
+    location /api/shipping/ { proxy_pass http://shipping-{{ENV}}.roboshop.internal:8080/; }
 
-    location /api/payment/ { proxy_pass http://localhost:8080/; }
+    location /api/payment/ { proxy_pass http://payment-{{ENV}}.roboshop.internal:8080/; }
 
     location /nginx_status {
         stub_status on;
