--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -1,40 +1,22 @@
-- name: Configuring the NodesJS
-  ansible.builtin.shell: curl --silent --location https://rpm.nodesource.com/setup_16.x | sudo bash -
-
-- name: Installing NodeJS
-  ansible.builtin.package:
-    name: nodejs
-    state: present
-
-- name: Creating the app user
-  ansible.builtin.user:
-    name: "{{ APPUSER }}"
-    comment:  Application user
-
-- name: Download and extract {{COMPONENT}}
+- name: Configurint the {{COMPONENT}}-{{ ENV }} server
   ansible.builtin.include_role:
     name: common
-    tasks_from: download 
-
-- name: Generating Artifacts from NPM
-  community.general.npm:
-    path: /home/{{APPUSER}}/{{COMPONENT}}
-
-- name: Copying the systemd files
-  ansible.builtin.template:
-    src: systemd.service
-    dest: /etc/systemd/service/system/{{COMPONENT}}.service
+    tasks_from: nodejs
 
 
-- name: Restarting the {{COMPONENT}}
-  ansible.builtin.systemd:
-    name: "{{COMPONENT}}"
-    state: restarted
-    enabled: true
-    daemon_reload: true
 
-- name: Configuring the node name 
-  ansible.builtin.shell: set-hostname {{ COMPONENT }}-{{ENV}}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
