--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -14,6 +14,28 @@
     state: started
     enabled: true
 
+# Rescue is nothing but if the task fails then only the other task should run (or))Rescue and blocks work together ; Tasks in rescue will only be executed if the task in block fails
+- name: Validate the default password 
+  block: 
+    - name: Get MySQL version with non-default credentials
+      community.mysql.mysql_info:
+        login_user: root
+        login_password: RoboShop@1
+        filter: version
+  rescue:
+    - name: Fetch the log file from the rmote note
+      ansible.builtin.slurp:
+        src: /var/log/mysqld.log
+      register: mysql_pwd_log
+
+- name: Grep the password and assign it to variable
+  ansible.builtin.set_fact:
+      DEFAULT_PASSWORD: "{{ mysql_pwd_log['content'] | b64decode | regex_findall('.*temporary password.*')| join(' ') |split(' ') | last }}"
+
+- name: Reset {{COMPONENT}} Default root password
+  ansible.builtin.shell:  echo "ALTER USER 'root'@'localhost' IDENTIFIED BY '{{ROOT_PASSWORD}}';" | mysql --connect-expired-password -uroot -p"{{DEFAULT_PASSWORD}}"
+
+
 - name: Configuring the node name 
   ansible.builtin.shell: set-hostname {{ COMPONENT }}-{{ENV}}
 
