--- a/roles/shipping/tasks/main.yml
+++ b/roles/shipping/tasks/main.yml
@@ -1,7 +1,7 @@
 - name: Configurint the {{COMPONENT}}-{{ ENV }} server
   ansible.builtin.include_role:
     name: common
-    tasks_from: nodejs
+    tasks_from: java
 
 
 
