--- a/roles/common/tasks/java.yml
+++ b/roles/common/tasks/java.yml
@@ -3,3 +3,8 @@
     name: maven
     state: present
 
+- name: Creating the app user
+- name: Installing maven for {{ COMPONENT }}- {{ENV}} server
+  ansible.builtin.package:
+    name: maven
+    state: present
