--- a/roles/shipping/templates/systemd.service
+++ b/roles/shipping/templates/systemd.service
@@ -1,1 +1,12 @@
+[Unit]
+Description=Shipping Service
 
+[Service]
+User=roboshop
+Environment=CART_ENDPOINT=cart-{{ENV}}.roboshop.internal:8080
+Environment=DB_HOST=mysql-{{ENV}}.roboshop.internal
+ExecStart=/bin/java -jar /home/roboshop/shipping/shipping.jar
+SyslogIdentifier=shipping
+
+[Install]
+WantedBy=multi-user.target
