--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -20,21 +20,13 @@
   community.general.npm:
     path: /home/{{APPUSER}}/{{COMPONENT}}
 
-- name: Copying the systemd files
-  ansible.builtin.template:
-    src: systemd.service
-    dest: /etc/systemd/service/system/{{COMPONENT}}.service
+- name: Configuring the service
+  ansible.builtin.include_role:
+    name: common
+    tasks_from: config_svc 
 
-
-- name: Restarting the {{COMPONENT}}
-  ansible.builtin.systemd:
-    name: "{{COMPONENT}}"
-    state: restarted
-    enabled: true
-    daemon_reload: true
-
-- name: Configuring the node name 
-  ansible.builtin.shell: set-hostname {{ COMPONENT }}-{{ENV}}
+- name: Configuring the node name repo
+  ansible.builtin.shell: set-hostname {{COMPONENT}}-{{ENV}}
 
 
 
