--- a/roles/common/tasks/create_user.yml
+++ b/roles/common/tasks/create_user.yml
@@ -2,4 +2,8 @@
   ansible.builtin.user:
     name: "{{APPUSER}}"
     comment:  Application user
+  register: OUT
 
+- name: Just printing the output 
+  ansible.builtin.debug: 
+    msg: "{{OUT}}"
