--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -35,23 +35,23 @@
 - name: Reset {{COMPONENT}} Default root password
   ansible.builtin.shell:  echo "ALTER USER 'root'@'localhost' IDENTIFIED BY '{{ROOT_PASSWORD}}';" | mysql --connect-expired-password -uroot -p"{{DEFAULT_PASSWORD}}"
 
-
 - name: Configuring the node name 
   ansible.builtin.shell: set-hostname {{ COMPONENT }}-{{ENV}}
 
 
-# - name: Download and extract {{COMPONENT}}
-#   ansible.builtin.include_role:
-#     name: common
-#     tasks_from: download 
+- name: Download and extract {{COMPONENT}}
+  ansible.builtin.include_role:
+    name: common
+    tasks_from: download 
 
-# - name: Injecting the mongoDB shema
-#   community.mongodb.mongodb_shell:
-#     file: "/tmp/{{COMPONENT}}-main/{{ item }}.js"
-#     idempotent: yes                                     #idempotent means if you apply an idempotent operation or function once or multiple times, the outcome remains the same.
-#   loop:
-#     - catalogue
-#     - users                        
+- name: Injecting the {{COMPONENT}} Schema
+  community.mysql.mysql_db:
+    state: import
+    name: all
+    target: /tmp/{{COMPONENT}}-main/shipping.sql
+    login_user: root
+    login_password: RoboShop@1 
+                    
 
 # - name: Injecting the mongoDB users shema
 #   community.mongodb.mongodb_shell:
